# alfred-home-service

./: CLA.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  cla.yml  release-please.yml
alfred_ext/: ha_utils.py  register.py
alfred_ext/features/: lighting.py  scenes.py
app/: capability_generator.py  entity_index.py  ha_client.py  ha_connection.py  home_feature.py  risk_map.py  server.py  state_forwarder.py
config/: reflex_tools.yaml  risk_map.yaml
docs/backlog/low/: ha-service-robustness-hardening.md
docs/qa-backlog/: ha-live-discovery-smoke.md
tests/: conftest.py  fake_ha.py  test_capability_generator.py  test_entity_index.py  test_fake_ha.py  test_ha_client.py  test_ha_connection.py  test_home_feature.py  test_risk_map.py  test_server.py  test_state_forwarder.py
