[project]
name = "home-service"
version = "0.1.0"
description = "Home Assistant wrapper microservice"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
alfred = [
    "alfred-sdk @ git+https://github.com/anirudhlath/alfred@v0.1.0#subdirectory=sdk",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.16",
    "mypy>=2.1",
]

[tool.setuptools.packages.find]
include = ["app*", "alfred_ext*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true

# alfred-sdk ships no `py.typed` marker (tracked upstream in alfred/sdk), so its exports
# resolve to `Any`. alfred_ext/ is the optional Alfred-integration layer that depends on
# it; skip following into it so app/ (the sovereign core) stays fully mypy --strict clean
# without those upstream-typing errors leaking in. Re-include once alfred-sdk is typed.
[[tool.mypy.overrides]]
module = ["alfred_ext.*", "alfred_sdk.*"]
ignore_missing_imports = true
follow_imports = "skip"
